# ChangeLog for kde-misc/networkmanagement
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/networkmanagement/ChangeLog,v 1.16 2012/08/17 09:56:03 johu Exp $

  17 Aug 2012; Johannes Huber <johu@gentoo.org>
  -networkmanagement-0.8_p20110714.ebuild, metadata.xml:
  Remove old.

  17 Aug 2012; Johannes Huber <johu@gentoo.org>
  networkmanagement-0.9.0.4.ebuild:
  Stable for x86, wrt bug #430370

  16 Aug 2012; Agostino Sarubbo <ago@gentoo.org>
  networkmanagement-0.9.0.4.ebuild:
  Stable for amd64, wrt bug #430370

*networkmanagement-0.9.0.4 (30 Jul 2012)

  30 Jul 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  +networkmanagement-0.9.0.4.ebuild, -networkmanagement-0.9.0.3.ebuild:
  Version bump, remove older.

*networkmanagement-0.9.0.3 (19 Jun 2012)

  19 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org>
  +networkmanagement-0.9.0.3.ebuild, -networkmanagement-0.9.0.1.ebuild,
  -networkmanagement-0.9.0.2.ebuild:
  Version bump to latest. Drop older.

*networkmanagement-0.9.0.2 (07 May 2012)

  07 May 2012; Johannes Huber <johu@gentoo.org>
  +networkmanagement-0.9.0.2.ebuild, -networkmanagement-0.9.0.ebuild:
  Version bump, remove old.

*networkmanagement-0.9.0.1 (11 Apr 2012)

  11 Apr 2012; Johannes Huber <johu@gentoo.org>
  +networkmanagement-0.9.0.1.ebuild:
  Version bump.

  27 Mar 2012; Andreas K. Huettel <dilfridge@gentoo.org>
  networkmanagement-0.8_p20110714.ebuild:
  Does not work with networkmanager-0.9

  27 Feb 2012; Theo Chatzimichos <tampakrap@gentoo.org>
  -networkmanagement-0.8.98.ebuild, -networkmanagement-0.8.99.ebuild:
  Remove old betas

*networkmanagement-0.9.0 (27 Feb 2012)

  27 Feb 2012; Johannes Huber <johu@gentoo.org> +networkmanagement-0.9.0.ebuild:
  Version bump.

  16 Feb 2012; Johannes Huber <johu@gentoo.org> networkmanagement-0.8.99.ebuild:
  Remove consolekit use flag. Its not needed anymore. Dbus policy file is
  removed by upstream. Fixes bug #403891.
