@@ -2,17 +2,19 @@
 Hash: SHA256
 
 DIST networkmanagement-0.9.0.4.tar.bz2 1296488 SHA256 520d0592171ce1aa1c54916f408e7f2d1e016da0acefc725f7170b67a292e256 SHA512 43c2984b194230c5c5f738c3d8c8a1b348c3de5e3ad02c34bfb8095c34cd307b8360a2cb66a0bcedf0566c97dea02aa6d905b2e390f65a935c39d1610f5b1cd3 WHIRLPOOL f74064e954ece7ec5166fa0ec3975b02924689d9e288e67174b71849379486247a92502f39cb2cd7963d88d06879a2b8a1adf48ae907a0d94b464654a43166ae
+DIST networkmanagement-0.9.0.5.tar.bz2 1303866 SHA256 aa7a467f1f2a0e1ad22486381284bfb1350d644d5fcf61f8449c475dbec963eb SHA512 e8d7e74a06933f9ae5c7ff7c29a3fcd80dcb6e9055bb72afb24b98457ca095c2902b698a0c303db66ce871a378cbbb3eaca68bee41d43ef2cec3a491ceab302e WHIRLPOOL afe81e0363302dc4ab271651fba024319eeeb2875fe896da8cf0f891cb834a85420118aa9760b2bea4ce2120c7673368f686c4b35a69740ff38b606645be5de4
 EBUILD networkmanagement-0.9.0.4.ebuild 829 SHA256 ae72597fa60ced4cf4fe622dee435a79bcd0ef080eba7580fc3fc61084a3de85 SHA512 7b62eb898a54047697f533d068c4e72278149cc6b6f9cfabfb5be66afe8b728152cbbd9b214f95f1a3c2ab2887f08cf7494ea8caa4d2c110b68ff0c3c0dd8d7e WHIRLPOOL 97c363a105dfcbc211ccd7a507a83383221c7c365ff392cf3d477b59921c306e70dc03c8a26ba5b0c9cace1581556e5986f48b4f5bc19a1eb5dbe7b50e4e32da
-MISC ChangeLog 8065 SHA256 4c70f4b13488d48657782112081048300f3fad98d0406c4fa1618a9fbaa058c7 SHA512 2bf58d79c9e686d11008aef840b103a33c1311d76364341f45c0a41e525b099206b1796b16286f86a763d5b326bbc85f84107716516519eb938fe17ddaf5cae1 WHIRLPOOL 6591c8696f33b3d49550f24a49386361aa012f6934024773834f1b38ccd0ace04c47fa0234a9c5663599043cf5e1d0a1af9b47c84c7fc8be65b242671b6ccc06
+EBUILD networkmanagement-0.9.0.5.ebuild 797 SHA256 13dbb02cfe4194bb797e3091e5b86f5fe7ddb44ab0331653de183c35ee6fcc59 SHA512 25b8bb6b528a1334a84c7bebf4d3c8ead984c0651a7d5a5b6d6c1a8ac9eac147593add5c691fa438d50ec9a89bfbdccb49051de867545eafd594fee32632514f WHIRLPOOL 0fa4265722867f792432147f39743b696d4ee6d7abae8d1c5aaed81886176dfc3f873c2265ba7272b717cf89934e369ec52bf352b691f4ca9d69db701a47ba23
+MISC ChangeLog 8209 SHA256 f24bbf8cf427f16544d2d503e3386ac8af591fa3266a3cacb12c3cc5701038d4 SHA512 4dd09500031445b40db33d071004d750710126e0e35237dc438eafe7f328164b3ec7cc6fa5b7dcd17223630fbfbc91c1efbf56a9162e5bf0f1867ee8ddf47a42 WHIRLPOOL 8f2b53ba524910328db58c95f812edfc4bbfacf89bc620842aa492bf42ee24dca670cb396202ec161412edfa05c6744e8c5ef7fc175043bedfc176507e384fc1
 MISC metadata.xml 156 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a SHA512 0dcd7cfb246c4518ed1653cb06f5d2c7220ea90160a4b1a1da43edf5124b76d7104fe35a545178b6b3df19f5f3a3eb3f31ac1b4d169e3ca90d78be3e20e58b05 WHIRLPOOL df162e3d521df7decdd84d980e4bc71531bb8e05486c07102c554b529c10a1fb3374dda79d56b13bc037a2d230b4b8ff25702c7a1b86d703a24e8bfe7fe57642
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQLhU9AAoJEO+t9ga+3I3aLmAH/3qyRUd5lXSfitntEHKCxmh9
-GwarX9lPySMeNoXPGYjF4FD2uECuyUHOjHxo/f4/hqZM6LsypsD26AnOuXPZx/Ty
-5T8CVTDv0CUNuDQRwIFNsG2ntroznCTmq7UzoPU8Vzx/csIHkHeZ2t9pJX1Oz/6p
-76eunTNug50IH2IlqNLrSWWbN+r2qjmnj1yYuCI42gx4WOxNZpTyUWXVhpHvxQF1
-7p1peHnltdYk39nrWQDLIkCdtl1Iss6J+QDeqpPTaq6y5HDRFuoaiW8hfl8n3Xxo
-f9lDJwUxMeIZygrqE8jhaR10zOKpWIqBntKhbqwYeKtdoeuESMXQ1BALdE5GHzU=
-=8Vra
+iQEcBAEBCAAGBQJQaoClAAoJEO+t9ga+3I3akqIH/jq+76zjCqHA5rl5qqmryocU
+wJjYrEZsawkRHFBU7jk/4CTbBZk/xqAvKeizkywHGvcvYwRRYle+frsJaOpfOlcq
+sbzJPcBTerMHvIe+xLv4G2VLL2IfC2UyhW3ac80thFMtZH7NW9BLzzCnjmKsPBB3
+wdxxKWF/hddc1X6j7dgvXw6egWsLGMg7fbuZbQRYcXmGW4VKP2UJC9bouv11QWCf
+ts1W47klBmyvTlk4h/wJq4TEC7aUH1WQ118gxEe2si2+uqg1UHZDaBerllV5RN9b
+pBdHvi5mY+1a+HwhHBb8CCxjuTw5aQwsK5z4iQ4dQrwxMIe0tcFMnTyJ39PDmD8=
+=WYAi
 -----END PGP SIGNATURE-----
